plugins {
    id "com.google.protobuf" version "0.9.4"
}

group = 'com.fayardev.regms'
version = '1.0'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework:spring-webmvc:6.0.13'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'org.springframework.cloud:spring-cloud-starter-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    implementation 'org.springframework.data:spring-data-ldap:2.6.2'

    implementation 'de.codecentric:spring-boot-admin-starter-client:3.1.8'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.3.0'

    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'

    implementation 'org.modelmapper:modelmapper:2.4.4'

    implementation 'javax.annotation:javax.annotation-api:1.3.2'

    implementation 'io.grpc:grpc-stub:1.58.0'
    implementation 'io.grpc:grpc-protobuf:1.58.0'
    implementation 'io.grpc:grpc-netty:1.58.0'

    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'jakarta.servlet:jakarta.servlet-api'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'org.aspectj:aspectjweaver:1.9.9.1'
    implementation 'org.aspectj:aspectjrt:1.9.9.1'

    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

protobuf {
    protoc { artifact = "com.google.protobuf:protoc:3.24.3" }
    plugins {
        grpc { artifact = "io.grpc:protoc-gen-grpc-java:1.58.0" }
    }
    generateProtoTasks {
        all()*.plugins { grpc {} }
    }
}

sourceSets {
    main {
        java {
            srcDirs 'build/generated/source/proto/main/grpc'
            srcDirs 'build/generated/source/proto/main/java'
        }
    }
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.fayardev.regms.userservice.UserServiceApplication'
        )
    }
}